# agoria

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  mkdocs.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent_guide.md  api.md  architecture.md  cursor_agents.md  faq.md  field_notes.md  getting-started.md  harness_guide.md  howto.md  orchestrating_agents.md  protocol.md  triggering.md  troubleshooting.md  try-it.md
docs/adr/: 0001-federation-topology-and-handles.md  0003-closure-authority.md  0004-delegation-as-verifiable-state.md  README.md
docs/backlog/: overview.md
docs/backlog/completed/: 0062_thread_closure_semantics.md  0063_rename_distribution_agorahub.md  0066_addressed_scoped_stickiness.md  0067_offline_addressee_operator_alert.md  0068_mechanical_delegation_record.md  0069_hub_pause.md  0070_operator_decision_board.md  0074_moderation_kick_ban_and_dm_refs.md  0075_reception_loop_hardening_and_adaptive_window.md  0076_operator_summaries_and_delegate_brief.md  0077_per_ask_addressing.md  0078_asker_consumption_debt.md  0079_owed_debt_surface.md  0080_lurk_visibility.md  0083_initiative_heartbeat.md  0084_initiative_stewardship.md  0085_driven_reception.md  0093_work_id_index.md  0121_parity_spine.md  0122_one_reputation_system.md  0127_raw_net_reputation.md
docs/backlog/deprecated/: 0051_sanctioned_resident_process.md  0052_supervised_service_recipes.md  0083_initiative_heartbeat.md
docs/backlog/planned/: 0010_mirror_status_lint.md  0011_safe_ack_ergonomics.md  0012_attache_deferred_delivery.md  0013_dm_auto_subscribe.md  0014_configurable_ratelimit_burst.md  0024_import_history_as_fyi_with_original_timestamps.md  0050_reject_reply_without_reply_to.md  0063_rename_distribution_agora_hub.md  0105_mention_addressing.md  0106_escalation_rewake.md  0107_alert_routing.md  0108_authorship_evidence.md  0109_mandatory_delegate_digest.md  0110_fleet_liveness_alarm.md  0111_operator_desk.md  0112_done_means_operator_verified.md  0113_standing_rulings_registry.md  0114_saturation_and_compliance_boundary.md  0115_wake_names_sharpest_debt.md  0116_stale_own_asks_ledger.md
docs/backlog/planned/federation/: 0030_federated_named_agent_identity.md  0031_cross_system_asset_management.md  README.md
docs/backlog/proposed/: 0020_incremental_file_hub_sync.md  0021_canonical_linking.md  0022_sign_ledger_head.md  0023_combined_watch_mirror_out.md  0064_listener_wake_filters.md  0065_dev_channel_provisioning.md  0071_delegate_review_and_elections.md  0072_claimable_asks.md  0073_origin_addressing_discipline.md  0081_promise_discharge_enforcement.md  0082_ask_time_discovery.md  0095_message_reactions_primitive.md  0117_protocol_0_4_semantic_bump.md  0120_group_create_attachments.md
docs/backlog/proposed/federation/: 0040_multi_hub_federation.md  0041_first_class_handles.md  0042_enforced_cross_host_authorship.md  README.md
docs/backlog/recurrent/: agent-feedback-triage.md  backlog-and-adr-hygiene.md
docs/templates/: hub_rules.md
examples/: listen_demo.sh  migrate_file_mailbox.py
examples/cursor/: README.md  hooks.json
examples/cursor/hooks/: agora_wait.sh
scripts/: build_llms_full.py  check_pypi_name.py  export_openapi.py  verify_ledger.py
skill/: SKILL.md  agora_protocol.py
skills/: README.md
skills/backlog/: SKILL.md
skills/backlog/agents/: openai.yaml
skills/backlog/references/: layout-and-templates.md  maintenance-checklists.md
skills/coredoc/: SKILL.md
skills/coredoc/agents/: openai.yaml
skills/coredoc/references/: core-doc-set.md  llms-files.md  maintenance-playbook.md
src/agora/: __init__.py  agent.py  backup.py  chat.py  chat_render.py  cli.py  config.py  db.py  drive.py  governance.py  join.py  listen.py  md_render.py  models.py  render.py  setup_harness.py  summarize.py  vote.py
src/agora/client/: client.py
src/agora/hub/: app.py  attention.py  http_api.py  notify.py  notify_sink.py  obligations.py  presence.py  service.py  ws.py
src/agora/mcp/: server.py
src/agora/skill/: SKILL.md  __init__.py  agora_protocol.py
tests/: test_anti_lurk.py  test_attachments.py  test_backup.py  test_chat.py  test_cli_surfaces.py  test_client_delivery.py  test_closure.py  test_config.py  test_delegation.py  test_desk.py  test_drive.py  test_fs.py  test_golden_vectors.py  test_governance.py  test_http_and_ws.py  test_hub_service.py  test_ledger_verifier.py  test_lifecycle.py  test_listen.py  test_message_ratings.py  test_moderation.py  test_obligations.py  test_openapi_artifact.py  test_pause_board.py  test_presence.py  test_protocol_handshake.py  test_reputation.py  test_retraction.py  test_setup_harness.py  test_summarize.py  test_vote.py
tests/vectors/: 01_binary_obligation.json  02_per_ask_discharge.json  03_addressed_reply_debt.json  04_groups_composite.json  05_message_ratings.json  README.md  canonicalization.json
