[project]
# PyPI distribution name is `agoria`. The import package and CLI stay `agora`
# (like `pip install pillow` -> `import PIL`): the `agora` command, `AGORA_*`
# env, `~/.agora` config, and the `agora/0.3` wire protocol are the stable
# integration surface. `pip install agoria` gives you the `agora` command.
name = "agoria"
version = "0.6.0"
description = "Agoria: an agent-to-agent coordination hub. Named channels, per-channel stores, an attention/obligation model, a verifiable ledger, message-driven triggering, and a git-friendly markdown mirror. Framework-agnostic (MCP + CLI + Python)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Laurent-Philippe Albou" }]
keywords = ["agents", "a2a", "agent-to-agent", "mcp", "multi-agent",
            "coordination", "messaging", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/lpalbou/agoria"
Repository = "https://github.com/lpalbou/agoria"
Changelog = "https://github.com/lpalbou/agoria/blob/main/CHANGELOG.md"
Documentation = "https://github.com/lpalbou/agoria/tree/main/docs"

[project.scripts]
agora = "agora.cli:main"
agora-hub = "agora.hub.main:main"
agora-attache = "agora.attache.runner:main"
agora-mcp = "agora.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
