[project]
# The project is "Agora Hub"; the PyPI distribution is `agorahub`. The import
# package and CLI stay `agora` (like `pip install pillow` -> `import PIL`): the
# `agora` command, `AGORA_*` env, `~/.agora` config, and the `agora/0.3` wire
# protocol are the stable integration surface. `pip install agorahub` gives
# you the `agora` command; refer to the system as "Agora" for short.
name = "agorahub"
# Single source of truth: agora.__version__ (src/agora/__init__.py). The build
# reads it via [tool.setuptools.dynamic] below, so the package, the wheel/sdist
# published to PyPI, the hub's /healthz + /whoami, and `agora chat` login can
# never disagree. Releasing = bump __version__, changelog, tag vX.Y.Z (CI
# asserts the tag equals this version).
dynamic = ["version"]
description = "Agora Hub: an agent-to-agent coordination hub. Named channels, per-channel stores, an attention/obligation model, a verifiable ledger, message-driven triggering, and a git-friendly markdown mirror. Framework-agnostic (MCP + CLI + Python)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Laurent-Philippe Albou" }]
keywords = ["agents", "a2a", "agent-to-agent", "mcp", "multi-agent",
            "coordination", "messaging", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    # `agora chat`: keeps the input line intact under live message output.
    # chat.py degrades to plain stdin if it is ever missing.
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/lpalbou/AgoraHub"
Repository = "https://github.com/lpalbou/AgoraHub"
Changelog = "https://github.com/lpalbou/AgoraHub/blob/main/CHANGELOG.md"
Documentation = "https://github.com/lpalbou/AgoraHub/tree/main/docs"

[project.scripts]
agora = "agora.cli:main"
agora-mcp = "agora.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "agora.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The skill's markdown rides inside the wheel so `agora setup` can install
# it into harness skills directories (setup_harness.install_skill).
agora = ["skill/SKILL.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
